update program page; get seed from location; display seed on landing page"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <canvas id="canvas"></canvas>
     <div class="seedInfo">
         Seed: "<span id="seed-info"></span>"
-        (?)
+        <div class="infoButton">?</div>
     </div>
     <main>
         <h1 class="largeText terrorize">
