--- a/program.html
+++ b/program.html
@@ -22,7 +22,7 @@
             <br>
             2020
         </div>
-        <div class="filters">
+        <div class="filters" style="display: none">
             <div class="filter-row filter-row-dates">
                 <div class="active">
                     All dates
