add target parent to banner

--- a/banner.html
+++ b/banner.html
@@ -36,12 +36,15 @@
     </style>
     <div class="marquee3k" 
         data-speed="0.25"
+        data-pausable="false"
     >
     <div class="marq">
-        Independent Space Index 2020 ∕
-        October 22—24 ∕ 
-        Independent Space Index 2020 ∕
-        October 22—24 ∕ 
+        <a href="https://2020.independentspaceindex.at" target="_parent">
+            Independent Space Index 2020 ∕
+            October 22—24 ∕ 
+            Independent Space Index 2020 ∕
+            October 22—24 ∕ 
+        </a>
     </div>
 </div>
 <script>Marquee3k.init()</script>
