--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                 <a class="break" href="mailto:contact@independentspaceindex.at">contact@independentspaceindex.at</a>
             </div>
             <br><br>
+            <div style="font-size: 1em">
+                <a class="normal" href="https://independentspaceindex.at/imprint">Privacy & Imprint</a>
+            </div>
         </article>
     </main>
 </body>
