--- a/banner.html
+++ b/banner.html
@@ -32,6 +32,7 @@
             padding: 0;
             border-bottom: 1px solid red;
             background: red;
+            overflow: hidden;
         }
     </style>
     <div class="marquee3k" 
