--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script type="text/javascript" src="./assets/js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="./assets/js/main.js?v=0.1"></script>
     <title>Independent Space Index 2020</title>
+    <meta property="og:title" content="Independent Space Index 2020" />
+    <meta property="og:url" content="https://2020.independentspaceindex.at" />
+    <meta property="og:image" content="assets/images/og.png" />
 </head>
 <body>
     <canvas id="canvas"></canvas>
