--- a/program.html
+++ b/program.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin="">
+    <link href="https://unpkg.com/mono-icons@1.0.5/iconfont/icons.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
     <script type="text/javascript" src="./assets/js/activearea.js"></script>
@@ -33,9 +34,6 @@
         </div>
         <div class="filters">
             <div class="filter-row filter-row-dates">
-                <button class="reset-button filter date-filter date-filter-all hidden">
-                    all
-                </button>
                 <button class="reset-button filter date-filter date-filter-single" data-date="22">
                     22
                 </button>
@@ -44,6 +42,9 @@
                 </button>
                 <button class="reset-button filter date-filter date-filter-single" data-date="24">
                     24
+                </button>
+                <button class="reset-button filter date-filter date-filter-all hidden">
+                all
                 </button>
             </div>
         </div>
